# speedtest

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  nginx.default.conf.template  package.json  vue.config.js
attic/: README.md
attic/server-go/: Makefile  server.go
config/: runtime-development.env.js  runtime-production.env.js
doc/: algorithm.md
public/: config.json.example  index.html
server/: Cargo.toml  Makefile
server-go/: Dockerfile  Makefile  README.md
server/src/: api.rs  ip.rs  main.rs
src/: App.vue  main.js
src/components/: BarGraph.vue  NavBar.vue  NumberValue.vue  ProgressBar.vue  RadialGauge.vue  ResizeMixin.vue
src/directives/: Collapse.js  Dropdown.js
src/lib/: speedtest.js
src/router/: index.js
src/store/: index.js  store.js
src/style/: bootstrap-post.scss  bootstrap-pre.scss  style.scss  theme.scss  variables.scss
src/views/: Info.vue  Settings.vue  SpeedTest.bs.vue  SpeedTest.vue
static/: config.json.example
