[package]
name = "speedtest-server"
version = "0.2.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
bytes = "0.5.3"
clap = "2.33.1"
env_logger = "0.7.1"
futures = "0.3.1"
http = "0.2.0"
log = "0.4.8"
once_cell = "1.4.0"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.44"
snafu = "0.6.1"
socket2 = "0.3.12"
tokio = { version = "0.2.9", features = [ "full" ] }
warp = { version = "0.2", features = [ "websocket", "tls" ] }

[[bin]]
name = "speedtest-server"
path = "src/main.rs"
